--- a/resources/index.html
+++ b/resources/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
   <h1 class="main-header">Discover hidden places in the world around you</h1>
-  <p><a href="#">Download Excursion (Coming Soon!)</a></p> 
-
+  <p><a class="link" href="#">Download Excursion (Coming Soon!)</a></p> 
 
 </body>
 </html>
