--- a/resources/index.html
+++ b/resources/index.html
@@ -10,6 +10,8 @@
 <body>
   <h1 class="main-header">Discover hidden places in the world around you</h1>
   <p><a class="link" href="#">Download Excursion (Coming Soon!)</a></p> 
-
+ <video autoplay loop>
+   <source src="./video/excursion (1).mp4" type="video/mp4">
+  </video>
 </body>
 </html>
