--- a/resources/index.html
+++ b/resources/index.html
@@ -13,5 +13,7 @@
  <video autoplay loop>
    <source src="./video/excursion (1).mp4" type="video/mp4">
   </video>
+  <h2 class="middle-header">Your personal travel guide</h2>
+  <h4 class="sub-header">Excursion remembers places you like, and recommends new points of interest around you.</h4>
 </body>
 </html>
