H2 bottom header change

--- a/resources/index.html
+++ b/resources/index.html
@@ -17,7 +17,7 @@
   <h4 class="sub-header">Excursion remembers places you like, and recommends new points of interest around you.</h4>
   <p><img src="./images/camp.jpg" alt="camping"></p>
   <p><img src="./images/phone.png" alt="cellphone"></p>
-  <h4 class="sub-header">Coming Soon for iPhone and Android</h4>
+  <h2 class="middle-header">Coming Soon for iPhone and Android</h2>
   <p><a class="link" href="#">Download Excursion (Coming Soon!)</a></p>
 </body>
 </html>
