--- a/resources/index.html
+++ b/resources/index.html
@@ -19,5 +19,6 @@
   <p><img src="./images/phone.png" alt="cellphone"></p>
   <h2 class="middle-header">Coming Soon for iPhone and Android</h2>
   <p><a class="link" href="#">Download Excursion (Coming Soon!)</a></p>
+  <p class="footer">© Excursion</p>
 </body>
 </html>
